<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="main_title">My Nanodegree Apps!</string>
    <string name="action_settings">Settings</string>
    <string name="spotify_button_text">SPOTIFY STREAMER</string>
    <string name="scores_button_text">SCORES APP</string>
    <string name="libary_button_text">LIBRARY APP</string>
    <string name="build_button_text">BUILD IT BIGGER</string>
    <string name="xyz_button_text">XYZ READER</string>
    <string name="capstone_button_text">CAPSTONE: MY OWN APP</string>

</resources>
